// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches the configured enterprise OIDC state 1`] = `
<section
  aria-label="Sign-in screen"
  class="auth-card"
>
  <div
    class="auth-card__intro"
  >
    <p
      class="eyebrow"
    >
      Engineering Team
    </p>
    <h1>
      Sign in to Engineering Team
    </h1>
    <p
      class="lede"
    >
      Use the configured enterprise identity provider to access Engineering Team.
    </p>
  </div>
  <div
    class="session-form__actions"
  >
    <button
      type="button"
    >
      Continue with enterprise sign-in
    </button>
  </div>
</section>
`;

exports[`matches the local internal fallback state 1`] = `
<section
  aria-label="Sign-in screen"
  class="auth-card"
>
  <div
    class="auth-card__intro"
  >
    <p
      class="eyebrow"
    >
      Engineering Team
    </p>
    <h1>
      Sign in to Engineering Team
    </h1>
    <p
      class="lede"
    >
      Use the configured enterprise identity provider to access Engineering Team.
    </p>
  </div>
  <div
    class="session-form__actions"
  >
    <button
      disabled=""
      type="button"
    >
      Continue with enterprise sign-in
    </button>
  </div>
  <p
    class="auth-status auth-status--error"
    role="alert"
  >
    This deployment has no enabled sign-in method. Contact the production operator to restore the approved login path.
  </p>
  <form
    class="session-form auth-form"
  >
    <label>
      Trusted auth code
      <input
        name="authCode"
        placeholder="Paste the signed browser auth code"
        value=""
      />
    </label>
    <label>
      API base URL
      <input
        name="apiBaseUrl"
        placeholder="same-origin"
        value=""
      />
    </label>
    <div
      class="session-form__actions"
    >
      <button
        class="button-secondary"
        type="submit"
      >
        Use internal bootstrap fallback
      </button>
    </div>
  </form>
</section>
`;

exports[`matches the no-login-path configuration error state 1`] = `
<section
  aria-label="Sign-in screen"
  class="auth-card"
>
  <div
    class="auth-card__intro"
  >
    <p
      class="eyebrow"
    >
      Engineering Team
    </p>
    <h1>
      Sign in to Engineering Team
    </h1>
    <p
      class="lede"
    >
      Use the configured enterprise identity provider to access Engineering Team.
    </p>
  </div>
  <div
    class="session-form__actions"
  >
    <button
      disabled=""
      type="button"
    >
      Continue with enterprise sign-in
    </button>
  </div>
  <p
    class="auth-status auth-status--error"
    role="alert"
  >
    This deployment has no enabled sign-in method. Contact the production operator to restore the approved login path.
  </p>
</section>
`;

exports[`matches the registration create-account state 1`] = `
<section
  aria-label="Sign-in screen"
  class="auth-card"
>
  <div
    class="auth-card__intro"
  >
    <p
      class="eyebrow"
    >
      Engineering Team
    </p>
    <h1>
      Create your account
    </h1>
    <p
      class="lede"
    >
      Create an account. An admin will approve access before you can use Engineering Team.
    </p>
  </div>
  <form
    class="session-form auth-form"
  >
    <label>
      Name
      <input
        autocomplete="name"
        name="displayName"
        value=""
      />
    </label>
    <label>
      Email address
      <input
        autocomplete="email"
        inputmode="email"
        name="registrationEmail"
        placeholder="you@example.com"
        type="email"
        value=""
      />
    </label>
    <div
      class="auth-field auth-password-field"
    >
      <label
        for="registrationPassword"
      >
        Password
      </label>
      <div
        class="auth-password-input"
      >
        <input
          aria-describedby="registrationPassword-hint"
          autocapitalize="none"
          autocomplete="new-password"
          id="registrationPassword"
          name="registrationPassword"
          spellcheck="false"
          type="password"
          value=""
        />
        <button
          aria-controls="registrationPassword"
          aria-label="Show password"
          class="auth-password-toggle"
          type="button"
        >
          Show
        </button>
      </div>
      <p
        class="auth-field-hint"
        id="registrationPassword-hint"
      >
        At least 12 characters with one letter and one number.
      </p>
    </div>
    <div
      class="session-form__actions"
    >
      <button
        type="submit"
      >
        Create account
      </button>
    </div>
    <p
      class="auth-form__footer"
    >
      <span>
        Already have an account?
      </span>
      <button
        class="auth-link-button"
        type="button"
      >
        Sign in
      </button>
    </p>
  </form>
</section>
`;

exports[`matches the registration reset-request state 1`] = `
<section
  aria-label="Sign-in screen"
  class="auth-card"
>
  <div
    class="auth-card__intro"
  >
    <p
      class="eyebrow"
    >
      Engineering Team
    </p>
    <h1>
      Reset your password
    </h1>
    <p
      class="lede"
    >
      Enter your account email and we will send reset instructions.
    </p>
  </div>
  <form
    class="session-form auth-form"
  >
    <label>
      Email address
      <input
        autocomplete="email"
        inputmode="email"
        name="resetEmail"
        placeholder="you@example.com"
        type="email"
        value=""
      />
    </label>
    <div
      class="session-form__actions"
    >
      <button
        type="submit"
      >
        Send reset instructions
      </button>
    </div>
    <p
      class="auth-form__footer"
    >
      <button
        class="auth-link-button"
        type="button"
      >
        Back to sign in
      </button>
    </p>
  </form>
</section>
`;

exports[`matches the registration sign-in state 1`] = `
<section
  aria-label="Sign-in screen"
  class="auth-card"
>
  <div
    class="auth-card__intro"
  >
    <p
      class="eyebrow"
    >
      Engineering Team
    </p>
    <h1>
      Sign in to Engineering Team
    </h1>
    <p
      class="lede"
    >
      Access your task workspace and inboxes.
    </p>
  </div>
  <form
    class="session-form auth-form"
  >
    <label>
      Email address
      <input
        autocomplete="email"
        inputmode="email"
        name="email"
        placeholder="you@example.com"
        type="email"
        value=""
      />
    </label>
    <div
      class="auth-field auth-password-field"
    >
      <label
        for="password"
      >
        Password
      </label>
      <div
        class="auth-password-input"
      >
        <input
          autocapitalize="none"
          autocomplete="current-password"
          id="password"
          name="password"
          spellcheck="false"
          type="password"
          value=""
        />
        <button
          aria-controls="password"
          aria-label="Show password"
          class="auth-password-toggle"
          type="button"
        >
          Show
        </button>
      </div>
    </div>
    <div
      class="auth-password-links"
    >
      <button
        class="auth-link-button"
        type="button"
      >
        Forgot password?
      </button>
    </div>
    <div
      class="session-form__actions"
    >
      <button
        type="submit"
      >
        Sign in
      </button>
    </div>
    <p
      class="auth-form__footer"
    >
      <span>
        New here?
      </span>
      <button
        class="auth-link-button"
        type="button"
      >
        Create an account
      </button>
    </p>
  </form>
</section>
`;
